# gummy

./: .gitignore  10-gummy.rules  CMakeLists.txt  README.md
src/: defs.h  main.cpp  utils.cpp  xorg.cpp  xorg.h
src/common/: defs.h  utils.cpp  utils.h
src/commons/: utils.cpp
src/gummy/: CMakeLists.txt  gummy.cpp
src/gummyd/: CMakeLists.txt  cfg.cpp  cfg.h  gummyd.cpp  screenctl.cpp  screenctl.h  sysfs.cpp  sysfs.h  utils.h  xorg.cpp  xorg.h
